--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="wrapper">
             <h1>Welcome to JDesign Page</h1>
             <a href="https://www.instagram.com/jdesign_art/" target="_blank" rel="noopener noreferrer">
-                <img alt="jdesign_art" src="url(../calmontero.git.io/img/instagram-logo-png.png")>
+                <img alt="jdesign_art" src="../calmontero.git.io/img/instagram-logo-png.png">
             </a>
             <div class="cards-container">
                 <div class="card1">
